--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-    background: #ff1b68;
+    background: url("freedom.jpg");
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -29,5 +29,55 @@ body {
 .main-header {
     background-color: #2ddf5c;
     padding: 8px 16px;
+    width: 100%;
+}
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+.main-header__brand {
+    color: #0e4f1f;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 22px;
 
 }
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 74px);
+    vertical-align: middle;
+}
+.main-nav__items {
+    margin:0;
+    padding:0;
+    list-style: none;
+}
+.main-nav__item {
+    display: inline-block;
+    margin: 0 16px;
+}
+.main-nav__item a {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 3px;
+}
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+}
+.main-nav__item--cta a {
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    border: none;
+    color:#ff1b68;
+    background: white;
+}
+
+
