--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
 
 .section-title {
     color: #2ddf5c;
+    text-align: center;
 }
 
 #product-overview h1 {
@@ -23,6 +24,104 @@ body {
     font-family: 'Anton', sans-serif;
 }
 
+.plan {
+    background: #d5ffdc;
+    text-align: center;
+    padding: 16px;
+    margin: 8px;
+    display: inline-block;
+    vertical-align: middle;
+    width: 30%;
+}
+
+.plan--highlighted {
+    background: #19b84c;
+    color: white;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.plan__annotation {
+    background: white;
+    color: #19b84c;
+    padding: 8px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+}
+
+.plan__title {
+    color: #0e4f1f;
+}
+
+.plan__price {
+    color: #858585;
+}
+
+.plan--highlighted .plan__title {
+    color: white;
+}
+
+.plan--highlighted .plan__price {
+    color: #0e4f1f;
+}
+
+.plan__features {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.plan__feature {
+    margin: 8px 0px;
+}
+
+.button {
+    background: #0e4f1f;
+    color: white;
+    font: inherit;
+    border: 1.5px solid #0e4f1f;
+    padding: 8px;
+    border-radius: 8px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+    background: white;
+    color: #0e4f1f;
+}
+
+.button:focus {
+    outline: none;
+}
+
+#key-features {
+    background: #ff1b68;
+    margin-top: 80px;
+    padding: 16px;
+}
+
+#key-features .section-title {
+    color: white;
+    margin: 32px;
+}
+
+.key-feature__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.key-feature {
+    display: inline-block;
+    width: 30%;
+}
+
+.key-feature__description {
+
+
+}
 /* h1 {
     font-family: sans-serif;
 } */
@@ -40,7 +139,6 @@ body {
     font-weight: bold;
     text-decoration: none;
     font-size: 22px;
-
 }
 .main-nav {
     display: inline-block;
@@ -61,7 +159,7 @@ body {
     color: #0e4f1f;
     text-decoration: none;
     font-weight: bold;
-    padding: 3px;
+    padding: 5px;
 }
 .main-nav__item a:hover,
 .main-nav__item a:active {
