--- a/main.css
+++ b/main.css
@@ -1,11 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-}
 
 #product-overview {
     background: url("freedom.jpg");
@@ -22,6 +14,12 @@ body {
 #product-overview h1 {
     color: white;
     font-family: 'Anton', sans-serif;
+}
+
+.plan__list {
+    width: 80%;
+    margin: auto;
+    text-align: center;
 }
 
 .plan {
@@ -74,27 +72,6 @@ body {
     margin: 8px 0px;
 }
 
-.button {
-    background: #0e4f1f;
-    color: white;
-    font: inherit;
-    border: 1.5px solid #0e4f1f;
-    padding: 8px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.button:hover,
-.button:active {
-    background: white;
-    color: #0e4f1f;
-}
-
-.button:focus {
-    outline: none;
-}
-
 #key-features {
     background: #ff1b68;
     margin-top: 80px;
@@ -136,57 +113,4 @@ body {
 /* h1 {
     font-family: sans-serif;
 } */
-.main-header {
-    background-color: #2ddf5c;
-    padding: 8px 16px;
-    width: 100%;
-}
-.main-header > div {
-    display: inline-block;
-    vertical-align: middle;
-}
-.main-header__brand {
-    color: #0e4f1f;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 22px;
-}
-.main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 74px);
-    vertical-align: middle;
-}
-.main-nav__items {
-    margin:0;
-    padding:0;
-    list-style: none;
-}
-.main-nav__item {
-    display: inline-block;
-    margin: 0 16px;
-}
-.main-nav__item a {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 5px;
-}
-.main-nav__item a:hover,
-.main-nav__item a:active {
-    color: white;
-    border-bottom: 5px solid white;
-}
-.main-nav__item--cta a {
-    background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
-}
-.main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    border: none;
-    color:#ff1b68;
-    background: white;
-}
-
 
