--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
 
 #product-overview {
-    background: url("freedom.jpg");
+    /* background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box; */
+    background-image: linear-gradient(180deg, yellow, transparent);
     width: 100%;
     height: 528px;
     padding: 10px;
+    margin-top: 43px;
+    position: relative;
 }
 
 .section-title {
@@ -14,6 +17,9 @@
 #product-overview h1 {
     color: white;
     font-family: 'Anton', sans-serif;
+    position: absolute;
+    bottom: 5%;
+    left: 3%;
 }
 
 .plan__list {
