--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,6 +2,14 @@ main {
     padding-top: 32px;
 }
 
+.background {
+    background: url("../images/plans-background.jpg");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+}
+
 .package {
     width: 80%;
     border: 4px solid #0e4f1f;
@@ -20,6 +28,18 @@ main {
     color: inherit;
     display: block;
     padding: 32px;
+    position: relative;
+}
+
+.package__badge {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    margin: 20px;
+    font-size: 12px;
+    color: white;
+    background: #ff5454;
+    padding: 8px;
 }
 
 .package__subtitle {
