--- a/shared.css
+++ b/shared.css
@@ -11,6 +11,10 @@ body {
     background-color: #2ddf5c;
     padding: 8px 16px;
     width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+
 }
 .main-header > div {
     display: inline-block;
@@ -21,6 +25,12 @@ body {
     font-weight: bold;
     text-decoration: none;
     font-size: 22px;
+    height: 22px;
+    display: inline-block;
+}
+
+.main-header__brand img {
+    height: 100%;
 }
 .main-nav {
     display: inline-block;
